variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:5: error: '(' expected but identifier found.
                                     if estSurBiscuit(){biscuits=biscuits+1}} 
                                        ^RunHalf:5: error: illegal start of simple expression
                                     if estSurBiscuit(){biscuits=biscuits+1}} 
                                                                            ^